Fixed alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import 'styles/variables';
 
+@import './styles/reset';
+
 .app {
 	display: grid;
 	grid-template-rows: auto 1fr auto;
@@ -12,6 +14,6 @@
 		margin: 0 auto;
 		padding: 0 $margin * 2;
 		height: 80vh;
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 }
