--- a/src/pages/experience/experience.scss
+++ b/src/pages/experience/experience.scss
@@ -1,7 +1,8 @@
 .organisation {
 	line-height: 2.8;
+	font-size: 12px;
 	&--name {
-		font-size: 28px;
+		font-size: 16px;
 	}
 	&--duration {
 
